# spp-tabu-search

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/results/: sppnw01_time_sweep.csv
scripts/: benchmark_readme.py  run_batch.py
src/spp_tabu/: __init__.py  cli.py  parser.py  tabu.py
