[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spp-tabu"
version = "0.1.0"
description = "Tabu Search baseline for Set Partitioning Problem (SPP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
spp-tabu = "spp_tabu.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
